Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 <li>common lossless input formats (including txt, netpbm, tiff, sif, fits, hdf, raw) plus common formats (as supported by QImage. New formats can be added runtime via C++ plugins or python scripting</li>
 <li>txt output format and proprietary binary format for image or session save</li>
 <li>vectorial export formats (pdf, svg)</li>
+</ul><p>Included analysis tools:</p>
+
+<ul>
+<li>2D wavelet analysis for analysis of interferometric images</li>
+<li>Analysis of VISAR images</li>
 </ul>
       </section>
       <footer>
