colorbar fixed (revenge)

--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -5,30 +5,27 @@
 <BODY LANG="en" DIR="LTR">
 + : increase zoom <BR>
 - : decrease zoom<BR>
-= : toggle (adapt zoom to window) and
-(set zoom to 100%)<BR>
+= : adapt zoom to window or 100%)<BR>
 <BR>
-<BR>
-m : toggles the mouse cursor from small
-to large cross<BR>
+m : toggles mouse shape<BR>
 r : show/hide origin ruler<BR>
-O : set origin to mouse cursor position
+o : set origin to mouse position<BR>
+O : same but for all images<BR>
 <BR>
 h : open the horizontal lineout<BR>
 v : open the vertical lineout<BR>
 Option-Up : go to previous image<BR>
 Option-Down : go to next image<BR>
 <BR>
-<BR>
 C : open colorbar window<BR>
-a : rescale image colors to limits
-(relative values)<BR>
-A : rescale image colors to limits
-(absolute values)<BR>
+c : inverse colorbar<BR>
+a : rescale image colors to limits<BR>
 Option-Left : go to previous colorbar<BR>
 Option-Right : go to next colorbar<BR>
 <BR>
+i : opens the measure window<BR>
 <BR>
-i : opens the Measure Window<BR>
+Tab : cycle over paths<BR>
+Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path and backspace will erase the path (if it's not owned by any window).
 </BODY>
 </HTML>
