--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -5,26 +5,26 @@
 <BODY LANG="en" DIR="LTR">
 + : increase zoom <BR>
 - : decrease zoom<BR>
-= : adapt zoom to window or 100%)<BR>
-<BR>
+= : adapt zoom to window or 100%)
+<HR>
 m : toggles mouse shape<BR>
 r : show/hide origin ruler<BR>
 o : set origin to mouse position<BR>
-O : same but for all images<BR>
-<BR>
+Shift-o : same but for all images
+<HR>
 h : open the horizontal lineout<BR>
 v : open the vertical lineout<BR>
 Option-Up : go to previous image<BR>
-Option-Down : go to next image<BR>
-<BR>
+Option-Down : go to next image
+<HR>
 C : open colorbar window<BR>
 c : inverse colorbar<BR>
 a : rescale image colors to limits<BR>
 Option-Left : go to previous colorbar<BR>
-Option-Right : go to next colorbar<BR>
-<BR>
-i : opens the measure window<BR>
-<BR>
+Option-Right : go to next colorbar
+<HR>
+Shift-i : opens the measure window
+<HR>
 Tab : cycle over paths<BR>
 Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path and backspace will erase the path (if it's not owned by any window).
 </BODY>
