added grid 'g' key and property pan 'p' key

--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -5,10 +5,11 @@
 <BODY LANG="en" DIR="LTR">
 + : increase zoom <BR>
 - : decrease zoom<BR>
-= : adapt zoom to window or 100%)
+= : adapt zoom to window or set 100%
 <HR>
 m : toggles mouse shape<BR>
 r : show/hide origin ruler<BR>
+g : show/hide grid<BR>
 o : set origin to mouse position<BR>
 Shift-o : same but for all images
 <HR>
@@ -17,15 +18,16 @@ v : open the vertical lineout<BR>
 Option-Up : go to previous image<BR>
 Option-Down : go to next image
 <HR>
-C : open colorbar window<BR>
-c : inverse colorbar<BR>
+c : inverse colorscale<BR>
+Shift-C : open colorbar window<BR>
 a : rescale image colors to limits<BR>
 Option-Left : go to previous colorbar<BR>
 Option-Right : go to next colorbar
 <HR>
+i : opens the list window
 Shift-i : opens the measure window
 <HR>
 Tab : cycle over paths<BR>
-Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path and backspace will erase the path (if it's not owned by any window).
+Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path (Shift+arrow will move faster) and backspace will erase the path (if it's not owned by any window).
 </BODY>
 </HTML>
