sif format: now stripping the binary header and putting all the rest in the property

--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
+<style>
+p {
+	font-family:"Times New Roman";
+	font-size:20px;
+}
+</style>
 </HEAD>
 <BODY LANG="en" DIR="LTR">
 + : increase zoom <BR>
@@ -29,5 +35,9 @@ Shift-i : opens the measure window
 <HR>
 Tab : cycle over paths<BR>
 Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path (Shift+arrow will move faster) and backspace will erase the path (if it's not owned by any window).
+<!--
+&#61;
+ -->
+
 </BODY>
 </HTML>
