fixed HDF5 scanbrightness

--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -30,14 +30,12 @@ a : rescale image colors to limits<BR>
 Option-Left : go to previous colorbar<BR>
 Option-Right : go to next colorbar
 <HR>
-i : opens the list window
+i : opens the list window<BR>
 Shift-i : opens the measure window
 <HR>
 Tab : cycle over paths<BR>
 Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path (Shift+arrow will move faster) and backspace will erase the path (if it's not owned by any window).
-<!--
-&#61;
- -->
-
+<HR>
+<A HREF="http://xkcd.com/1343">http://xkcd.com/1343</A>
 </BODY>
 </HTML>
