--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -33,7 +33,16 @@ i : opens the list window<BR>
 Shift-i : opens the measure window
 <HR>
 Tab : cycle over paths<BR>
-Once a path is selected, pressing return will pop up the path-property window. Arrows will move the path (Shift+arrow will move faster) and backspace will erase the path (if it's not owned by any window).
+Once a path is selected, pressing '?' will pop up the path-property window. Arrows will move the path (Shift+arrow will move faster) and backspace will erase the path (if it's not owned by any window).<BR>
+<HR>
+Lines: <br>
+b : toggle Bezier line
+c : toggle closed line
+p : prepend point
+a : append point
+d : delete point
+x : will put the first 2 point horizontal
+y : will put the first 2 point vertical
 <HR>
 <A HREF="http://xkcd.com/1343">http://xkcd.com/1343</A>
 </BODY>
