--- a/resources/shortcuts.html
+++ b/resources/shortcuts.html
@@ -27,7 +27,10 @@ Option-Down : go to next image
 Shift-C : open colorbar window<BR>
 a : rescale image colors to limits<BR>
 Option-Left : go to previous colorbar<BR>
-Option-Right : go to next colorbar
+Option-Right : go to next colorbar<BR>
+&gt; : increases the &gamma;<BR>
+&lt; : reduces the &gamma;<BR>
+(if &gamma; negative takes 1/&gamma;)
 <HR>
 i : opens the list window<BR>
 Shift-i : opens the measure window
