--- a/resources/html/shortcuts.html
+++ b/resources/html/shortcuts.html
@@ -29,8 +29,7 @@ a : rescale image colors to limits<BR>
 Option-Left : go to previous colorbar<BR>
 Option-Right : go to next colorbar<BR>
 &gt; : increases the &gamma;<BR>
-&lt; : reduces the &gamma;<BR>
-(if &gamma; negative takes 1/&gamma;)
+&lt; : reduces the &gamma;
 <HR>
 i : opens the list window<BR>
 Shift-i : opens the measure window
