--- a/resources/html/shortcuts.html
+++ b/resources/html/shortcuts.html
@@ -1,13 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
-<HEAD>
-<style>
-p {
-	font-family:"Times New Roman";
-	font-size:20px;
-}
-</style>
-</HEAD>
 <BODY LANG="en" DIR="LTR">
 + : increase zoom <BR>
 - : decrease zoom<BR>
@@ -21,33 +13,34 @@ Shift-o : same but for all images
 <HR>
 h : open the horizontal lineout<BR>
 v : open the vertical lineout<BR>
-Option-Up : go to previous image<BR>
-Option-Down : go to next image
+%CTRL%-Up : go to previous image<BR>
+%CTRL%-Down : go to next image
 <HR>
 Shift-C : open colorbar window<BR>
 a : rescale image colors to limits<BR>
-Option-Left : go to previous colorbar<BR>
-Option-Right : go to next colorbar<BR>
+%CTRL%-Left : go to previous colorbar<BR>
+%CTRL%-Right : go to next colorbar<BR>
 &gt; : increases the &gamma;<BR>
-&lt; : reduces the &gamma;
-Option-9 : Rescale the colorbar so that 99% of the pixels are visible<BR>
+&lt; : reduces the &gamma;<BR>
+%CTRL%-9 : Rescale the colorbar so that 99% of the pixels are visible<BR>
 <HR>
 i : opens the list window<BR>
 Shift-i : opens the measure window
 <HR>
 Tab : cycle over paths<BR>
-Once a path is selected, pressing 'w' will pop up the path-property window.<BR>
-Arrows will move the path (Shift+arrow will move faster) and backspace will erase the path (if it's not owned by any window).<BR>
+w : pop up the path-property window.<BR>
+Arrows will move the path<BR>
+Shift+arrow will move faster<BR> 
+backspace : erase the path (if it's not owned by any window).<BR>
 <HR>
 Lines: <br>
-b : toggle Bezier line
-c : toggle closed line
-p : prepend point
-a : append point
-d : delete point
-x : will put the first 2 point horizontal
-y : will put the first 2 point vertical
-
+b : toggle Bezier line<BR>
+c : toggle closed line<BR>
+p : prepend point<BR>
+a : append point<BR>
+d : delete point<BR>
+x : will put the first 2 point horizontal<BR>
+y : will put the first 2 point vertical<BR>
 <HR>
 <A HREF="http://xkcd.com/1343">http://xkcd.com/1343</A>
 </BODY>
