fix colorbar ... again

--- a/plugins/Shortcuts/Shortcuts.html
+++ b/plugins/Shortcuts/Shortcuts.html
@@ -16,10 +16,11 @@ v : open the vertical lineout<BR>
 %CTRL%-Up : go to previous image<BR>
 %CTRL%-Down : go to next image
 <HR>
-Shift-C : open colorbar window<BR>
-a : rescale image colors to limits<BR>
+c : open colorbar window<BR>
 %CTRL%-Left : go to previous colorbar<BR>
 %CTRL%-Right : go to next colorbar<BR>
+%CTRL%-0 : rescale colorbar to image<BR>
+%CTRL%-9 : rescale colorbar to 99% of the pixels<BR>
 &gt; : increases the &gamma;<BR>
 &lt; : reduces the &gamma;<BR>
 %CTRL%-9 : Rescale the colorbar so that 99% of the pixels are visible<BR>
