--- a/plugins/Shortcuts/Shortcuts.html
+++ b/plugins/Shortcuts/Shortcuts.html
@@ -19,7 +19,7 @@ v : open the vertical lineout<BR>
 c : open colorbar window<BR>
 %CTRL%-Left : go to previous colorbar<BR>
 %CTRL%-Right : go to next colorbar<BR>
-%CTRL%-0 : rescale colorbar to image<BR>
+%CTRL%-A : rescale colorbar to image min/max<BR>
 %CTRL%-9 : rescale colorbar to 99% of the pixels<BR>
 &gt; : increases the &gamma;<BR>
 &lt; : reduces the &gamma;<BR>
