fix some shortcut not working

--- a/plugins/Shortcuts/Shortcuts.html
+++ b/plugins/Shortcuts/Shortcuts.html
@@ -5,11 +5,11 @@
 - : decrease zoom<BR>
 = : adapt zoom to window or set 100%
 <HR>
-m : toggles mouse shape<BR>
-r : show/hide origin ruler<BR>
-g : show/hide grid<BR>
-o : set origin to mouse position<BR>
-Shift-o : same but for all images
+%CTRL%m : toggles mouse shape<BR>
+%CTRL%r : show/hide origin ruler<BR>
+%CTRL%g : show/hide grid<BR>
+%CTRL%0 : set origin to mouse position<BR>
+%CTRL%=Shift-0 : same but for all images
 <HR>
 h : open the horizontal lineout<BR>
 v : open the vertical lineout<BR>
@@ -42,6 +42,8 @@ a : append point<BR>
 d : delete point<BR>
 x : will put the first 2 point horizontal<BR>
 y : will put the first 2 point vertical<BR>
+r : will put the first 4 points in square<BR>
+shift-r : will make 4 points expand to the image<BR>
 <HR>
 <A HREF="http://xkcd.com/1343">http://xkcd.com/1343</A>
 </BODY>
