fix closing Image_list while removing a lot of images

--- a/plugins/Shortcuts/Shortcuts.html
+++ b/plugins/Shortcuts/Shortcuts.html
@@ -45,6 +45,8 @@ y : will put the first 2 point vertical<BR>
 r : will put the first 4 points in square<BR>
 shift-r : will make 4 points expand to the image<BR>
 <HR>
+%CTRL%-%OPTION%-%COMMAND%-G : save a screenshot of the current window to the home folder.	
+<HR>
 <A HREF="http://xkcd.com/1343">http://xkcd.com/1343</A>
 </BODY>
 </HTML>
