--- a/plugins/Shortcuts/Shortcuts.html
+++ b/plugins/Shortcuts/Shortcuts.html
@@ -45,7 +45,8 @@ y : will put the first 2 point vertical<BR>
 r : will put the first 4 points in square<BR>
 shift-r : will make 4 points expand to the image<BR>
 <HR>
-%CTRL%-%OPTION%-%COMMAND%-G : save a screenshot of the current window to the home folder.	
+%CTRL%-%OPTION%-%COMMAND%-S : save a screenshot of the current window to the home folder.<BR> 
+%CTRL%-%OPTION%-%COMMAND%-J : copy a status of the open analysis window to be reused into the javascript console.	
 <HR>
 <A HREF="http://xkcd.com/1343">http://xkcd.com/1343</A>
 </BODY>
